# grppi-exercises

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/blur/: CMakeLists.txt  blur_grppi.cpp  blur_seq.cpp  kernel_gauss5.txt
apps/dgemv/: CMakeLists.txt  dgemv_grppi.cpp  dgemv_seq.cpp
apps/mandelbrot/: CMakeLists.txt  mandelbrot_grppi.cpp  mandelbrot_seq.cpp
apps/mandelbrot_video/: CMakeLists.txt  mandelbrot_video_grppi.cpp  mandelbrot_video_seq.cpp
apps/mergesort/: CMakeLists.txt  mergesort_grppi.cpp  mergesort_seq.cpp
apps/sensor/: CMakeLists.txt  sensor_grppi.cpp  sensor_seq.cpp
cmake.modules/: build-external.cmake  build-grppi.cmake
